<resources>
    <string name="app_name">寒假考核</string>
    <string name="guide_game">游戏</string>
    <string name="guide_store">商店</string>
    <string name="guide_msg">消息</string>
    <string name="guide_setting">属性</string>
    <string name="change_nv_image">更换头像</string>
    <string name="watch_weather">查看当前天气</string>
    <string name="game_rule">游戏规则</string>
    <string name="save_data">存档</string>
    <string name="leave">退出</string>
    <string name="toolbar_item1">广告</string>
    <string name="toolbar_take_photo">截屏</string>
    <string name="game_start">开始</string>
    <string name="door_4">生</string>
    <string name="game_select_in">确定</string>
    <string name="door_1">死</string>
    <string name="door_right">兵</string>
    <string name="door_left">景</string>
    <string name="game_not_in">取消</string>
    <string name="person_life">生命值:</string>
    <string name="attack">攻击力:</string>
    <string name="defense">防御力:</string>
    <string name="strike">暴击率:</string>
    <string name="strike_icon">%</string>
    <string name="yasuo_music">专属背景音乐</string>
    <string name="exc_progressbar">经验条:</string>
    <string name="null_message">暂时没有消息哦</string>
    <string name="store_name_1">装备库</string>
    <string name="eqm4">不朽盾弓</string>
    <string name="eqm5">无尽之刃</string>
    <string name="eqm6">饮血剑</string>
    <string name="eqm1">多兰剑</string>
    <string name="eqm2">锁子甲</string>
    <string name="eqm3">巨人腰带</string>
    <string name="steal">生命偷取:</string>
</resources>