<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:id="@+id/drawer_layout">

    <LinearLayout
        android:id="@+id/main_lin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_baseline_person_24"
            android:layout_width="match_parent"
            app:title="恩哥索弟的纸上游戏"
            app:titleTextColor="@color/black"
            app:subtitle="寒假考核"
            app:menu="@menu/toolbar_menu"
            app:subtitleTextColor="@color/blue"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </androidx.appcompat.widget.Toolbar>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/main_view_pager2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RadioGroup
            android:id="@+id/radio_group_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/drawer_select_btn_game"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/guide_game"
                android:textColor="@drawable/text_select_color"
                android:textSize="16sp"/>
            <RadioButton
                android:id="@+id/store"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/drawer_select_btn_store"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/guide_store"
                android:textColor="@drawable/text_select_color"
                android:textSize="16sp"/>
            <RadioButton
                android:id="@+id/msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/drawer_select_btn_msg"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/guide_msg"
                android:textColor="@drawable/text_select_color"
                android:textSize="16sp"/>
            <RadioButton
                android:id="@+id/setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/drawer_select_btn_setting"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/guide_setting"
                android:textColor="@drawable/text_select_color"
                android:textSize="16sp"/>
        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_layout"
        app:menu="@menu/nv_menu"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/green" />
</androidx.drawerlayout.widget.DrawerLayout>