<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shezhi">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/setting_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:src="@drawable/kuaile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/circle_style"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="快乐风男"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/ll_exc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_image" />

    <LinearLayout
        android:id="@+id/ll_exc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_image"
        app:layout_constraintVertical_bias="0.248">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_exc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="等级:"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/number_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/setting_person_life"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_exc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exc_progressbar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/exc_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:progress="0"
            android:max="10"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_person_life"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_exc"
        app:layout_constraintVertical_bias="0.166">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_life" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_life"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/setting_number_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="50"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_person_attack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_person_life"
        app:layout_constraintVertical_bias="0.066">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_attack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/setting_number_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="20"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_person_defense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_person_attack"
        app:layout_constraintVertical_bias="0.077">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_defense" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/setting_number_defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="30"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_person_dodge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_person_defense"
        app:layout_constraintVertical_bias="0.106">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_strike" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strike"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/setting_number_strike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strike_icon"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_person_steal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_person_dodge"
        app:layout_constraintVertical_bias="0.132">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_steal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steal"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/setting_number_steal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strike_icon"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_person_dodge"
        app:layout_constraintVertical_bias="0.546">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_music" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yasuo_music"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/music_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_music_start"
        android:selectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music"
        app:layout_constraintVertical_bias="0.421" />

</androidx.constraintlayout.widget.ConstraintLayout>